# cpp-pettingzoo

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  README.md  pyproject.toml
core/: base_env.cpp  base_env.h  entity.h  scenario.h  types.h  world.cpp  world.h
cpp_mpe2/: _wrappers.py
cpp_mpe2/collect_treasure/: collect_treasure.py
cpp_mpe2/collect_treasure/cpp/: collect_treasure_env.cpp
cpp_mpe2/simple/: simple.py
cpp_mpe2/simple/cpp/: simple_env.cpp
cpp_mpe2/simple_adversary/: simple_adversary.py
cpp_mpe2/simple_adversary/cpp/: simple_adversary_env.cpp
cpp_mpe2/simple_crypto/: simple_crypto.py
cpp_mpe2/simple_crypto/cpp/: simple_crypto_env.cpp
cpp_mpe2/simple_formation/: simple_formation.py
cpp_mpe2/simple_formation/cpp/: simple_formation_env.cpp  simple_formation_scenario.h
cpp_mpe2/simple_line/: simple_line.py
cpp_mpe2/simple_line/cpp/: simple_line_env.cpp  simple_line_scenario.h
cpp_mpe2/simple_push/: simple_push.py
cpp_mpe2/simple_push/cpp/: simple_push_env.cpp
cpp_mpe2/simple_reference/: simple_reference.py
cpp_mpe2/simple_reference/cpp/: simple_reference_env.cpp
cpp_mpe2/simple_speaker_listener/: simple_speaker_listener.py
cpp_mpe2/simple_speaker_listener/cpp/: simple_speaker_listener_env.cpp
cpp_mpe2/simple_spread/: simple_spread.py
cpp_mpe2/simple_spread/cpp/: simple_spread_env.cpp
cpp_mpe2/simple_tag/: simple_tag.py
cpp_mpe2/simple_tag/cpp/: simple_tag_env.cpp
cpp_mpe2/simple_world_comm/: simple_world_comm.py
cpp_mpe2/simple_world_comm/cpp/: simple_world_comm_env.cpp
cpp_pettingzoo/: benchmark.py  benchmark_simple_crypto.py  benchmark_simple_formation.py  benchmark_simple_push.py  benchmark_simple_reference.py  benchmark_simple_speaker_listener.py  benchmark_simple_spread.py  benchmark_simple_tag.py  benchmark_simple_world_comm.py
cpp_pettingzoo/core/: __init__.py
cpp_pettingzoo/simple/: __init__.py  simple.py
cpp_pettingzoo/simple/cpp/: bindings.cpp  simple_core.cpp  simple_core.h  simple_env.cpp  simple_env.h  simple_scenario.cpp  simple_scenario.h
cpp_pettingzoo/simple_adversary/cpp/: simple_adversary_scenario.h
cpp_pettingzoo/simple_crypto/: __init__.py  simple_crypto.py
cpp_pettingzoo/simple_crypto/cpp/: bindings.cpp  simple_crypto_env.cpp  simple_crypto_env.h  simple_crypto_scenario.cpp  simple_crypto_scenario.h
cpp_pettingzoo/simple_formation/: __init__.py  simple_formation.py
cpp_pettingzoo/simple_formation/cpp/: bindings.cpp  simple_formation_env.cpp  simple_formation_env.h  simple_formation_scenario.cpp  simple_formation_scenario.h
cpp_pettingzoo/simple_push/: __init__.py  simple_push.py
cpp_pettingzoo/simple_push/cpp/: bindings.cpp  simple_push_env.cpp  simple_push_env.h  simple_push_scenario.cpp  simple_push_scenario.h
cpp_pettingzoo/simple_reference/: __init__.py  simple_reference.py
cpp_pettingzoo/simple_reference/cpp/: bindings.cpp  simple_reference_env.cpp  simple_reference_env.h  simple_reference_scenario.cpp  simple_reference_scenario.h
cpp_pettingzoo/simple_speaker_listener/: __init__.py  simple_speaker_listener.py
cpp_pettingzoo/simple_speaker_listener/cpp/: bindings.cpp  simple_speaker_listener_env.cpp  simple_speaker_listener_env.h  simple_speaker_listener_scenario.cpp  simple_speaker_listener_scenario.h
cpp_pettingzoo/simple_spread/: __init__.py  simple_spread.py
cpp_pettingzoo/simple_spread/cpp/: bindings.cpp  simple_spread_env.cpp  simple_spread_env.h  simple_spread_scenario.cpp  simple_spread_scenario.h
cpp_pettingzoo/simple_tag/: __init__.py  simple_tag.py
cpp_pettingzoo/simple_tag/cpp/: bindings.cpp  simple_tag_env.cpp  simple_tag_env.h  simple_tag_scenario.cpp  simple_tag_scenario.h
cpp_pettingzoo/simple_world_comm/: __init__.py  simple_world_comm.py
cpp_pettingzoo/simple_world_comm/cpp/: bindings.cpp  simple_world_comm_env.cpp  simple_world_comm_env.h  simple_world_comm_scenario.cpp  simple_world_comm_scenario.h
tests/: compare_render.py  test_dynamics_responsive.py  test_pettingzoo_api.py  test_render.py  test_simple_equivalence.py
tests/test_simple/: __init__.py  test_aec.py  test_api.py  test_equivalence.py
tests/test_simple_crypto/: test_aec.py  test_equivalence.py  test_render.py
tests/test_simple_formation/: test_aec.py  test_equivalence.py  test_render.py
tests/test_simple_push/: test_aec.py  test_api.py  test_equivalence.py  test_render.py
tests/test_simple_reference/: __init__.py  test_aec.py  test_api.py  test_equivalence.py  test_render.py
tests/test_simple_speaker_listener/: test_aec.py  test_api.py  test_equivalence.py  test_render.py
tests/test_simple_spread/: __init__.py  test_aec.py  test_api.py  test_equivalence.py  test_render.py
tests/test_simple_tag/: test_aec.py  test_api.py  test_equivalence.py  test_render.py
tests/test_simple_world_comm/: test_aec.py  test_equivalence.py  test_render.py
