[project]
name = "cpp-pettingzoo"
version = "0.1.0"
description = "Fast C++ implementations of PettingZoo MPE environments with Python bindings"
requires-python = ">=3.10"
dependencies = [
    "pybind11>=2.11.0",
    "pettingzoo>=1.24.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "mpe2>=0.0.1",
    "pytest>=7.0.0",
]
